Fix IT in CI by truncating createdAt to milliseconds to avoid comparison issues